yaml/deployment_service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: bork
  name: bork-deployment
  namespace: bork
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bork
  template:
    metadata:
      labels:
        app: bork
    spec:
      serviceAccountName: bork-sa
      volumes:
        - name: bork-config
          configMap:
            name: bork-config
      containers:
      - image: kradalby/bork:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: bork-config
            mountPath: "/etc/bork/config"
            subPath: "config"
            readOnly: true
        name: bork-container
        ports:
        - containerPort: 3000
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app: bork
  name: bork-service
  namespace: bork
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: bork
