yaml/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bork-ingress
  namespace: bork
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"

    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: cf-dns
spec:
  tls:
  - hosts:
    - bork.fap.no
    secretName: bork-fap-no-tls
  rules:
  - host: bork.fap.no
    http:
      paths:
      - path: /
        backend:
          serviceName: bork-service
          servicePort: 80
